# mesh-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  SERVICE_CALL_SEGFAULT.md  TODO.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml  publish-extension.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.9-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md
.planning/debug/: website-broken-styling.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.9-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-REQUIREMENTS.md  v5.0-REQUIREMENTS.md  v6.0-REQUIREMENTS.md  v7.0-REQUIREMENTS.md  v7.0-ROADMAP.md  v8.0-REQUIREMENTS.md  v8.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/mesh-codegen/: Cargo.toml
crates/mesh-codegen/src/: link.rs
crates/mesh-codegen/src/codegen/: expr.rs  intrinsics.rs  mod.rs  pattern.rs  types.rs
crates/mesh-codegen/src/mir/: lower.rs  mod.rs  mono.rs  types.rs
crates/mesh-codegen/src/pattern/: compile.rs  mod.rs
crates/mesh-common/: Cargo.toml
crates/mesh-fmt/: Cargo.toml
crates/mesh-lsp/: Cargo.toml
crates/mesh-lsp/src/: analysis.rs  completion.rs  definition.rs  lib.rs  server.rs  signature_help.rs
crates/mesh-parser/: Cargo.toml
crates/mesh-pkg/: Cargo.toml
crates/mesh-pkg/src/: lockfile.rs  manifest.rs  resolver.rs  scaffold.rs
crates/mesh-rt/: Cargo.toml
crates/meshc/: Cargo.toml
crates/meshc/src/: discovery.rs  main.rs  migrate.rs
crates/meshc/tests/: e2e.rs  e2e_actors.rs  e2e_concurrency_stdlib.rs  e2e_fmt.rs  e2e_stdlib.rs  e2e_supervisors.rs
crates/snow-codegen/: Cargo.toml
crates/snow-codegen/src/: lib.rs  link.rs
crates/snow-codegen/src/codegen/: expr.rs  intrinsics.rs  mod.rs  pattern.rs  types.rs
crates/snow-codegen/src/mir/: lower.rs  mod.rs  mono.rs  types.rs
crates/snow-codegen/src/pattern/: compile.rs  mod.rs
crates/snow-common/: Cargo.toml
crates/snow-fmt/: Cargo.toml
crates/snow-lexer/: Cargo.toml
crates/snow-lsp/: Cargo.toml
crates/snow-lsp/src/: analysis.rs  definition.rs  lib.rs  server.rs
crates/snow-parser/: Cargo.toml
crates/snow-pkg/: Cargo.toml
crates/snow-repl/: Cargo.toml
crates/snow-repl/src/: jit.rs  lib.rs  session.rs
crates/snow-rt/: Cargo.toml
crates/snow-rt/src/: env.rs  file.rs  gc.rs  hash.rs  io.rs  json.rs  lib.rs  option.rs  panic.rs  string.rs
crates/snow-rt/src/actor/: child_spec.rs  heap.rs  job.rs  link.rs  mailbox.rs  mod.rs  process.rs  registry.rs  scheduler.rs  service.rs  stack.rs  supervisor.rs
crates/snow-rt/src/collections/: list.rs  map.rs  mod.rs  queue.rs  range.rs  set.rs  tuple.rs
crates/snow-rt/src/db/: mod.rs  pg.rs  pool.rs  row.rs  sqlite.rs
crates/snow-rt/src/http/: client.rs  mod.rs  router.rs  server.rs
crates/snow-rt/src/ws/: close.rs  frame.rs  handshake.rs  mod.rs  rooms.rs  server.rs
crates/snow-typeck/: Cargo.toml
crates/snow-typeck/src/: builtins.rs  diagnostics.rs  error.rs  exhaustiveness.rs  infer.rs  lib.rs  traits.rs  ty.rs  unify.rs
crates/snow-typeck/tests/: actors.rs  diagnostics.rs  exhaustiveness_integration.rs  inference.rs  integration.rs  structs.rs  sum_types.rs  supervisors.rs  traits.rs
crates/snow-typeck/tests/snapshots/: diagnostics__diag_ambiguous_method_deterministic_order.snap  diagnostics__diag_ambiguous_method_help_text.snap  diagnostics__diag_arity_mismatch.snap  diagnostics__diag_if_branch_mismatch.snap  diagnostics__diag_invalid_guard_expression.snap  diagnostics__diag_missing_field.snap  diagnostics__diag_non_exhaustive_match.snap  diagnostics__diag_not_a_function.snap  diagnostics__diag_receive_outside_actor.snap  diagnostics__diag_redundant_arm.snap  diagnostics__diag_self_outside_actor.snap  diagnostics__diag_send_type_mismatch.snap  diagnostics__diag_spawn_non_function.snap  diagnostics__diag_trait_not_satisfied.snap  diagnostics__diag_type_mismatch.snap  diagnostics__diag_unbound_variable.snap  diagnostics__diag_unknown_field.snap
crates/snowc/: Cargo.toml
crates/snowc/src/: discovery.rs  main.rs
crates/snowc/tests/: e2e.rs  e2e_actors.rs  e2e_concurrency_stdlib.rs  e2e_fmt.rs  e2e_stdlib.rs  e2e_supervisors.rs  tooling_e2e.rs
editors/vscode-mesh/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  mesh-lang-0.2.0.vsix  package-lock.json  package.json
editors/vscode-snow/: package-lock.json  package.json  snow-lang-0.1.0.vsix
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.tsx  globals.css  main.tsx
install/: install.ps1
mesher/: main.mpl  mesher.ll
mesher/api/: alerts.mpl  dashboard.mpl  detail.mpl  helpers.mpl  search.mpl  settings.mpl  team.mpl
mesher/ingestion/: auth.mpl  fingerprint.mpl  pipeline.mpl  routes.mpl  validation.mpl  ws_handler.mpl
mesher/migrations/: 20260216120000_create_initial_schema.mpl
mesher/services/: event_processor.mpl  org.mpl  org_service.mpl  project.mpl  project_service.mpl  rate_limiter.mpl  retention.mpl  stream_manager.mpl  user.mpl  user_service.mpl  writer.mpl
mesher/storage/: queries.mpl  schema.mpl  writer.mpl
mesher/types/: alert.mpl  event.mpl  issue.mpl  project.mpl  retention.mpl  user.mpl
tests/: trait_codegen.mpl
tests/compile_fail/: deriving_json_non_serializable.snow  deriving_json_sum_non_serializable.mpl
tests/e2e/: actors_100k.snow  actors_basic.snow  (+170 more)
website/: components.json  package-lock.json  package.json  tsconfig.json
(+1462 files in other folders)
