[workspace]
members = [
    "crates/snow-common",
    "crates/snow-lexer",
    "crates/snow-parser",
    "crates/snow-typeck",
    "crates/snow-rt",
    "crates/snow-codegen",
    "crates/snowc",
]
resolver = "2"

[workspace.dependencies]
insta = { version = "1.46", features = ["yaml"] }
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
ena = "0.14"
rustc-hash = "2"
ariadne = "0.6"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
clap = { version = "4.5", features = ["derive"] }
