[package]
name = "mesh-codegen"
version = "0.1.0"
edition = "2021"
description = "LLVM code generation for the Mesh compiler"

[dependencies]
inkwell = { workspace = true }
mesh-common = { path = "../mesh-common" }
mesh-parser = { path = "../mesh-parser" }
mesh-typeck = { path = "../mesh-typeck" }
rustc-hash = { workspace = true }
rowan = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
