[package]
name = "mesh-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP server for the Mesh language"

[dependencies]
mesh-lexer = { path = "../mesh-lexer" }
mesh-parser = { path = "../mesh-parser" }
mesh-typeck = { path = "../mesh-typeck" }
mesh-common = { path = "../mesh-common" }
mesh-fmt = { path = "../mesh-fmt" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
rowan = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
