[package]
name = "mesh-pkg"
version = "0.1.0"
edition = "2021"
description = "Mesh language package manager (manifest parsing, dependency resolution, lockfile)"

[dependencies]
toml = { workspace = true }
git2 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
