[package]
name = "meshc"
version = "0.1.0"
edition = "2021"
description = "The Mesh compiler"

[dependencies]
mesh-common = { path = "../mesh-common" }
mesh-lexer = { path = "../mesh-lexer" }
mesh-parser = { path = "../mesh-parser" }
mesh-typeck = { path = "../mesh-typeck" }
mesh-codegen = { path = "../mesh-codegen" }
mesh-lsp = { path = "../mesh-lsp" }
mesh-fmt = { path = "../mesh-fmt" }
mesh-pkg = { path = "../mesh-pkg" }
mesh-repl = { path = "../mesh-repl" }
clap = { workspace = true }
ariadne = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
