[package]
name = "mesh-repl"
version = "0.1.0"
edition = "2021"
description = "Interactive REPL with LLVM JIT compilation for the Mesh language"

[dependencies]
mesh-common = { path = "../mesh-common" }
mesh-lexer = { path = "../mesh-lexer" }
mesh-parser = { path = "../mesh-parser" }
mesh-typeck = { path = "../mesh-typeck" }
mesh-codegen = { path = "../mesh-codegen" }
mesh-rt = { path = "../mesh-rt" }
inkwell = { workspace = true }
rowan = { workspace = true }
rustyline = { workspace = true }
