[package]
name = "snow-rt"
version = "0.1.0"
edition = "2021"
description = "Snow language runtime library (GC, strings, panic handler, actor scheduler)"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
corosensei = "0.3"
parking_lot = "0.12"
rustc-hash = { workspace = true }
serde_json = "1"
ureq = "2"
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
# Phase 54: PostgreSQL wire protocol
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
base64 = "0.22"
rand = "0.9"
# Phase 55: TLS for PostgreSQL connections
# All three crates are already compiled as transitive deps of ureq 2.12.
# Adding them as direct deps costs zero additional compile time.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
webpki-roots = "0.26"
rustls-pki-types = "1"

[dev-dependencies]
tempfile = "3"
