[package]
name = "mesh-typeck"
version = "0.1.0"
edition = "2021"

[dependencies]
mesh-common = { path = "../mesh-common" }
mesh-parser = { path = "../mesh-parser" }
ena = { workspace = true }
rustc-hash = { workspace = true }
rowan = { workspace = true }
ariadne = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
