[package]
name = "snowc"
version = "0.1.0"
edition = "2021"
description = "The Snow compiler"

[dependencies]
snow-common = { path = "../snow-common" }
snow-lexer = { path = "../snow-lexer" }
snow-parser = { path = "../snow-parser" }
snow-typeck = { path = "../snow-typeck" }
snow-codegen = { path = "../snow-codegen" }
snow-lsp = { path = "../snow-lsp" }
clap = { workspace = true }
ariadne = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
