[package]
name = "snowc"
version = "0.1.0"
edition = "2021"
description = "The Snow compiler"

[dependencies]
snow-common = { path = "../snow-common" }
snow-lexer = { path = "../snow-lexer" }
snow-parser = { path = "../snow-parser" }
snow-typeck = { path = "../snow-typeck" }
snow-codegen = { path = "../snow-codegen" }
snow-lsp = { path = "../snow-lsp" }
snow-fmt = { path = "../snow-fmt" }
snow-pkg = { path = "../snow-pkg" }
clap = { workspace = true }
ariadne = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
